fix: small pr fixes